# document-hub-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  API_ENDPOINT_CATALOG.md  BACKEND_STACK_COMPARISON.md  DATABASE_SCHEMA.md  PHASE1_API_DOCS.md  PHASE1_DEPLOYMENT.md  PHASE1_MONITORING.md  PHASE1_TESTING.md  README.md  RECOMMENDATION.md  alembic.ini  docker-compose.yml  phase1_config.env  pyproject.toml
app/: main.py  models.py
app/api/: deps.py
app/core/: config.py  enums.py  security.py
app/db/: session.py
app/extraction/: pipeline.py
app/models/: correction_models.py
app/schemas/: DOCUMENT_CORRECTION_GUIDE.md  DOCUMENT_CORRECTION_IMPLEMENTATION_MANIFEST.md  DOCUMENT_CORRECTION_SUMMARY.md  __init__.py  confidence.py  confidence_routing.py  correction_api.py  document_classification.py  document_correction.py  header_extraction.py  output_formatter.py  table_extraction.py  unified_document.py  unified_document_migration.py  (+1 more)
app/services/: __init__.py  (+35 more)
migrations/: add_deep_intelligence_fields.sql  add_ocr_jobs_result_json.sql  apply_complete_migration.py  apply_deep_intelligence_migration.py  apply_ocr_jobs_migration.py  complete_schema_migration.sql  env.py
scripts/: seed_user.py  test_easyocr.py
tests/: test_document_classifier.py  test_document_classifier_examples.py  test_documents_export.py  test_header_extraction_engine.py  test_header_extraction_examples.py  test_llm_queue.py  test_main.py  test_matching_rules_preview.py  test_ocr_queue_retry.py  test_ocr_workflow.py  test_phase1_integration.py  test_resource_monitor.py  test_storage_settings.py  test_table_extraction_engine.py  test_table_extraction_examples.py  test_validation_and_normalization.py  test_validation_examples.py
(+66 files in other folders)
